# Rustboard

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  rust-toolchain.toml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
config/: services.example.yaml
core/: Cargo.toml
core/src/: config.rs  discover.rs  health.rs  main.rs  plugin.rs  service.rs  ssh.rs
core/tests/: config_test.rs
core/web/: index.html
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  PLUGINS.md  SECURITY.md
plugin-openai-tester/: Cargo.toml
plugin-openai-tester/src/: lib.rs  main.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
scripts/: build-local.ps1  build-local.sh  ensure-wsl.ps1  install-plugin-openai-tester.ps1  install-plugin-openai-tester.sh  release.ps1  release.sh
web/: Cargo.toml
web/src/: lib.rs
