[package]
name = "plugin-openai-tester"
version = "0.1.0"
edition = "2021"
description = "Dashboard plugin — tests OpenAI-compatible API keys via stdin/stdout JSON protocol"

[[bin]]
name = "plugin-openai-tester"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
