[package]
name = "plugin-openai-tester"
version = "0.1.0"
edition = "2021"
description = "Dashboard plugin — tests OpenAI-compatible API keys (Extism WASM plugin)"
autobins = false

[lib]
name = "plugin_openai_tester"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
extism-pdk = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
